--- a/functions/myfunction/package.json
+++ b/functions/myfunction/package.json
@@ -21,5 +21,9 @@
     "eslint": "^6.8.0",
     "mocha": "^8.4.0",
     "sinon": "^10.0.0"
+  },
+  "dependencies": {
+    "@tensorflow-models/toxicity": "^1.2.2",
+    "@tensorflow/tfjs": "1.0"
   }
 }
