--- a/functions/myfunction/package.json
+++ b/functions/myfunction/package.json
@@ -22,6 +22,9 @@
     "mocha": "^8.4.0",
     "sinon": "^10.0.0"
   },
+  "peerDependencies": {
+    "@tensorflow/tfjs": "1.0"    
+  },
   "dependencies": {
     "@tensorflow-models/toxicity": "^1.2.2",
     "@tensorflow/tfjs": "1.0"
