--- a/functions/myfunction/package.json
+++ b/functions/myfunction/package.json
@@ -23,10 +23,10 @@
     "sinon": "^10.0.0"
   },
   "peerDependencies": {
-    "@tensorflow/tfjs": "1.0"    
+    "@tensorflow/tfjs": "^3.14.0"
   },
   "dependencies": {
     "@tensorflow-models/toxicity": "^1.2.2",
-    "@tensorflow/tfjs": "1.0"
+    "@tensorflow/tfjs": "^3.14.0"
   }
 }
