--- a/functions/myfunction/package.json
+++ b/functions/myfunction/package.json
@@ -22,11 +22,7 @@
     "mocha": "^8.4.0",
     "sinon": "^10.0.0"
   },
-  "peerDependencies": {
-    "@tensorflow/tfjs": "^3.14.0"
-  },
   "dependencies": {
-    "@tensorflow-models/toxicity": "^1.2.2",
-    "@tensorflow/tfjs": "^3.14.0"
+    "node-fetch": "^3.2.3"
   }
 }
